--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 ant.customtasks.libs=JWSAntTasks
 application.title=Wideokomunikator
 application.vendor=Piotr
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
