--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,11 @@ file.reference.derbytools.jar=C:\\Program Files\\Java\\jdk1.8.0_05\\db\\lib\\der
 file.reference.ffmpeg.jar=D:\\Programowanie\\javacv\\javacv-bin\\ffmpeg.jar
 file.reference.javacpp.jar=D:\\Programowanie\\javacv\\javacv-bin\\javacpp.jar
 file.reference.javacv.jar=D:\\Programowanie\\javacv\\javacv-bin\\javacv.jar
+file.reference.opencv-linux-x86.jar=D:\\Programowanie\\javacv\\javacv-bin\\opencv-linux-x86.jar
+file.reference.opencv-linux-x86_64.jar=D:\\Programowanie\\javacv\\javacv-bin\\opencv-linux-x86_64.jar
+file.reference.opencv-macosx-x86_64.jar=D:\\Programowanie\\javacv\\javacv-bin\\opencv-macosx-x86_64.jar
+file.reference.opencv-windows-x86.jar=D:\\Programowanie\\javacv\\javacv-bin\\opencv-windows-x86.jar
+file.reference.opencv-windows-x86_64.jar=D:\\Programowanie\\javacv\\javacv-bin\\opencv-windows-x86_64.jar
 file.reference.opencv.jar=D:\\Programowanie\\javacv\\javacv-bin\\opencv.jar
 file.reference.slf4j-api-1.7.10.jar=D:\\Programowanie\\slf4j-api-1.7.10.jar
 file.reference.slf4j-simple-1.7.10.jar=D:\\Programowanie\\slf4j-simple-1.7.10.jar
@@ -57,7 +62,12 @@ javac.classpath=\
     ${file.reference.derbynet.jar}:\
     ${file.reference.xuggle-xuggler-5.4.jar}:\
     ${file.reference.slf4j-simple-1.7.10.jar}:\
-    ${file.reference.slf4j-api-1.7.10.jar}
+    ${file.reference.slf4j-api-1.7.10.jar}:\
+    ${file.reference.opencv-linux-x86.jar}:\
+    ${file.reference.opencv-linux-x86_64.jar}:\
+    ${file.reference.opencv-macosx-x86_64.jar}:\
+    ${file.reference.opencv-windows-x86.jar}:\
+    ${file.reference.opencv-windows-x86_64.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
