Audio & Video works

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,7 +69,7 @@ javac.classpath=\
     ${file.reference.opencv-windows-x86.jar}:\
     ${file.reference.opencv-windows-x86_64.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
